summary: Scopri le novità della funzionalità per i carichi di lavoro ai della farm. 
---
= Novità della farm di workload BlueXP  per Genai
:allow-uri-read: 
:icons: font
:imagesdir: ./media/


[role="lead"]
Scopri le novità della funzionalità per i carichi di lavoro ai generici della farm di workload.



== 02 febbraio 2025



=== Filtraggio del tipo di file per le origini dati

GenAI ora supporta la selezione di tipi di file specifici da includere nella scansione dell'origine dati quando si aggiunge un'origine dati.

link:https://docs.netapp.com/us-en/workload-genai/create-knowledgebase.html#add-data-sources-to-the-knowledge-base["Aggiungere fonti di dati alla knowledge base"]



=== Filtro della data di modifica del file per le origini dati

GenAI ora supporta il filtraggio dei file da includere nella scansione dell'origine dati per data di modifica quando si aggiunge un'origine dati. È possibile scegliere un intervallo di date di modifica per i file inclusi.

link:https://docs.netapp.com/us-en/workload-genai/create-knowledgebase.html#add-data-sources-to-the-knowledge-base["Aggiungere fonti di dati alla knowledge base"]



=== Supporto per i file di immagine e supporto migliorato per i file PDF

GenAI ora supporta la scansione di file di immagine e immagini all'interno di file PDF (noto anche come supporto di file multimodali). Se si scelgono i file immagine, il testo delle immagini viene acquisito nell'origine dati e utilizzato come dati. Questa funzionalità include immagini all'interno di documenti PDF; se si includono tipi di file PDF, le immagini all'interno di ciascun PDF vengono acquisite per il testo e tale testo viene incluso nelle informazioni provenienti dall'origine dati.

link:https://docs.netapp.com/us-en/workload-genai/create-knowledgebase.html#add-data-sources-to-the-knowledge-base["Aggiungere fonti di dati alla knowledge base"]



=== Ricerca ibrida e supporto di nuovo rank
